--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
 
     <build>
         <plugins>
+            <!-- Generating Q classes -->
             <plugin>
                 <groupId>com.mysema.maven</groupId>
                 <artifactId>apt-maven-plugin</artifactId>
