--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -10,14 +10,10 @@ management:
 
 spring:
   datasource:
-#    platform: postgres
-#    url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/mainDB
-#    username: postgres
-#    password: password256
-
-    url: jdbc:postgresql://localhost:5432/platform_test_db
+    platform: postgres
+    url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/mainDB
     username: postgres
-    password: root
+    password: password256
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -26,7 +22,7 @@ spring:
       hibernate:
         jdbc:
           lob:
-            non_contextual_creation: false
+            non_contextual_creation: true
     show-sql: false
 # для миграции
   flyway:
