--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <flyway.version>6.5.2</flyway.version>
         <springstatemachine.version>2.2.0.RELEASE</springstatemachine.version>
         <querydsl.version>4.3.1</querydsl.version>
+        <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
     </properties>
 
     <modules>
@@ -80,6 +81,19 @@
                 <artifactId>spring-statemachine-test</artifactId>
                 <version>${springstatemachine.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.github.openfeign</groupId>
+                <artifactId>feign-jackson</artifactId>
+                <version>11.0</version>
             </dependency>
 
             <dependency>
