--- a/university/pom.xml
+++ b/university/pom.xml
@@ -32,5 +32,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- Мапперы -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
     </dependencies>
 </project>
