Закомментрированы строки с функционалом proxy (в EndpointApplication и FeignConfig)

--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -37,9 +37,12 @@ spring:
 feign:
   okhttp:
     enabled: true
-  proxy:
-    ip: "166.98.140.51"
-    port: 3128
+  client:
+    config:
+      feignName:
+        connectTimeout: 5000
+        readTimeout: 5000
+
 logging:
   file:
     name: "log"
