--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>system</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- Spring -->
