B-65 Вынесение модуля system в отдельный репозиторий - Fix 2

--- a/pom.xml
+++ b/pom.xml
@@ -357,7 +357,7 @@
     <repositories>
         <repository>
             <id>system-mvn-repo</id>
-            <url>https://raw.github.com/studentsplatformru/</url>
+            <url>https://raw.github.com/studentsplatformru/system</url>
             <snapshots>
                 <enabled>true</enabled>
                 <updatePolicy>always</updatePolicy>
