B-65 Вынесение модуля system в отдельный репозиторий - Fix 4

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,5 +24,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: maven-settings-xml-action
+        uses: whelk-io/maven-settings-xml-action@v11
+        with:
+          repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/studentsplatformru/system" }]'
+          servers: '[{ "id": "github", "username": "krylovsergey1999", "password": ${{ secrets.SYSTEM_TOKEN }}" }]'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+
