--- a/.github/workflows/maven-feature.yml
+++ b/.github/workflows/maven-feature.yml
@@ -7,7 +7,6 @@ on:
       - 'release*'
 
 jobs:
-
   test:
     name: Unit Test
     runs-on: ubuntu-18.04
@@ -27,3 +26,17 @@ jobs:
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
         run: mvn -B clean verify
+      - name: Build with Maven
+          run: mvn -B clean install --file pom.xml
+  build:
+    name: Build
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
+      - name: Maven Package
+        run: mvn -B clean package -DskipTests
