--- a/.github/workflows/maven-feature.yml
+++ b/.github/workflows/maven-feature.yml
@@ -1,18 +1,16 @@
-name: Feature Branch
+name: Master Feature
 
 on:
   pull_request:
     branches:
-      - '*'
+      - '1.0.0'
   push:
     branches:
       - '*'
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-18.04
-
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK 11
@@ -20,9 +18,9 @@ jobs:
         with:
           java-version: 1.11
       - name: maven-settings-xml-action
-          uses: whelk-io/maven-settings-xml-action@v11
-          with:
-            repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/studentsplatformru/system" }]'
-            servers: '[{ "id": "github", "username": "krylovsergey1999", "password": "${{ secrets.SYSTEM_TOKEN }}" }]'
+        uses: whelk-io/maven-settings-xml-action@v11
+        with:
+          repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/studentsplatformru/system" }]'
+          servers: '[{ "id": "github", "username": "krylovsergey1999", "password": "${{ secrets.SYSTEM_TOKEN }}" }]'
       - name: Maven Package
         run: mvn -B clean package -DskipTests
