--- a/.github/workflows/maven-master.yml
+++ b/.github/workflows/maven-master.yml
@@ -38,6 +38,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.4
+      - name: maven-settings-xml-action
+        uses: whelk-io/maven-settings-xml-action@v11
+        with:
+          repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/studentsplatformru/system" }]'
+          servers: '[{ "id": "github", "username": "krylovsergey1999", "password": "${{ secrets.SYSTEM_TOKEN }}" }]'
       - name: SonarCloud Scan
         run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
