--- a/.github/workflows/maven-master.yml
+++ b/.github/workflows/maven-master.yml
@@ -24,7 +24,7 @@ jobs:
           repositories: '[{ "id": "github", "url": "https://maven.pkg.github.com/studentsplatformru/system" }]'
           servers: '[{ "id": "github", "username": "krylovsergey1999", "password": "${{ secrets.SYSTEM_TOKEN }}" }]'
       - name: Maven Package
-        run: mvn -B clean package -DskipTests
+        run: mvn -e -B clean package -DskipTests
       - name: Maven Verify
         run: mvn -B clean verify
 
