--- a/pom.xml
+++ b/pom.xml
@@ -370,6 +370,9 @@
             <properties>
                 <sonar.sources>.</sonar.sources>
                 <sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
+                <sonar.moduleKey>
+                    ${project.groupId}:${project.artifactId}
+                </sonar.moduleKey>
                 <sonar.projectKey>
                     studentsplatformru_Platform-Backend-${project.groupId}:${project.artifactId}
                 </sonar.projectKey>
