--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -11,7 +11,7 @@ management:
 spring:
   datasource:
     platform: postgres
-    url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/mainDB
+    url: @spring.datasource.url@
     username: postgres
     password: password256
     driver-class-name: org.postgresql.Driver
@@ -50,7 +50,8 @@ spring:
           writetimeout: 5000
           connectiontimeout: 5000
 
-#must be false in production
+  profiles:
+    active: @spring.profiles.active@
 mail:
  debug: true
 
