Переключение профилей теперь переключает приложение между альтернативными application.yml

--- a/pom.xml
+++ b/pom.xml
@@ -329,6 +329,8 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <!--Позволяет Maven манипулировать данными в ресурсах endpoint (root)-->
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
