--- a/.github/workflows/maven-master.yml
+++ b/.github/workflows/maven-master.yml
@@ -12,7 +12,7 @@ jobs:
     
     # Запускаем и unit + тесты интеграции
     # Поэтому в -Pintegration-test команду Maven CLI был добавлен параметр in mvn -B clean verify -Pintegration-test.
-    # В процессе сборки активный профиль проекта будет переключен в prod.
+    # В процессе сборки активный профиль проекта будет переключен в prod благодаря параметру -P.
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
@@ -20,6 +20,7 @@ jobs:
         with:
           java-version: 11.0.4
       - name: Maven Package
+        # Параметр -P с указанием профиля prod переключает активный профиль.
         run: mvn -B clean package -Pprod -DskipTests
       - name: Maven Verify
         run: mvn -B clean verify
