--- a/.github/workflows/maven-feature.yml
+++ b/.github/workflows/maven-feature.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           java-version: 1.11
       - name: Maven Package
-        run: mvn -B clean package -DskipTests
+        run: mvn -B clean package -Pprod -DskipTests
