--- a/endpoint/src/main/resources/application-prod.yml
+++ b/endpoint/src/main/resources/application-prod.yml
@@ -12,8 +12,8 @@ spring:
   datasource:
     platform: postgres
     url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/mainDB
-    username: postgres
-    password: password256
+    username: prodAdmin
+    password: ${{ secrets.DB_PROD_PASS }}
     driver-class-name: org.postgresql.Driver
 
   jpa:
