--- a/endpoint/src/main/resources/application-test.yml
+++ b/endpoint/src/main/resources/application-test.yml
@@ -12,8 +12,8 @@ spring:
   datasource:
     platform: postgres
     url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/testDB
-    username: postgres
-    password: password256
+    username: testAdmin
+    password: ${{ secrets.DB_TEST_PASS }}
     driver-class-name: org.postgresql.Driver
 
   jpa:
