--- a/endpoint/src/main/resources/application-dev.yml
+++ b/endpoint/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ spring:
     platform: postgres
     url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/devDB
     username: devAdmin
-    password: ${ }
+    password: WinkingDolphin
     driver-class-name: org.postgresql.Driver
 
   jpa:
