Обработаны все Warn'ы: Добавлены методы hashcode и equals для составного ключа SpbuEventId Отключен jpa open-in-view Добавлен файл config.properties
В DockerFile добавлен параметр переключения профиля в prod (Вероятно, в данный момент он висит на сервере в профиле DEV).
Это может убить сервер, если он не сможет прочитаться из github.secrets (но в этом нужно убедиться)

--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 spring:
+  application:
+    name: StudentPlatform
+  jpa:
+    open-in-view: false
   profiles:
 #   PlaceHolder для имени активного профиля. Транслируется из главного POM. Позволяет выбрать активный application.yml
     active: @spring.profiles.active@
-
